# innowise_laboratory

./: .gitignore
lecture_1/: .gitignore  main.py  pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: queries.sql  school.db
lecture_5/book_api/: main.py  models.py  requirements.txt  routes.py
lecture_6/: .dockerignore  Dockerfile  main.py
lecture_6/book_api/: database.py  main.py  models.py  routes.py  schemas.py
